--- a/src/styles.less
+++ b/src/styles.less
@@ -1,12 +1,12 @@
-@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/themes/viva-dark/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
-@primary-color: #3B82F6; 
+@primary-color: #9eade6; 
 @dark-color: #1C1C1C; 
 
 body, html {
     height: auto;
     margin: 0;
-    background-color: @dark-color;
+    background-image: url('./assets/images/background.png');
   }
