--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -9,4 +9,23 @@
     }
 }
 
+.container{
+    margin: 0 !important;
+    padding: 0 !important;
+    min-height: 100%;
+    width: 100%;
+    
+}
+
+.test{
+    width: 100%;
+    min-height: 100%;
+    background-image: url('../../assets/images/background.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+
 
