--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,4 @@
-@import "primeng/resources/themes/viva-dark/theme.css";
+// @import "primeng/resources/themes/viva-dark/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
@@ -6,7 +6,5 @@
 @dark-color: #1C1C1C; 
 
 body, html {
-    height: auto;
     margin: 0;
-    background-image: url('./assets/images/background.png');
-  }
+}
