--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 85%;
-    font-size: 20px;
+    font-size: 20rem;
     color: #fff;
     &:hover{
         cursor: pointer;
@@ -12,20 +12,25 @@
 .container{
     margin: 0 !important;
     padding: 0 !important;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
-    
-}
-
-.test{
-    width: 100%;
-    min-height: 100%;
     background-image: url('../../assets/images/background.png');
-    background-repeat: no-repeat;
-    background-position: center;
+    background-position: 50% 0;
     background-size: cover;
 }
 
+.flex-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    flex-direction: column;
+
+    *{      
+
+    }
+}
 
 
 
