--- a/src/styles.less
+++ b/src/styles.less
@@ -9,3 +9,43 @@ body, html {
     height: 100%;
     margin: 0;
 }
+
+
+h1 {
+    font-size: 2em; /* 32px */
+}
+
+h2 {
+    font-size: 1.5em; /* 24px */
+}
+
+p {
+    font-size: 1em; /* 16px */
+}
+
+span {
+    font-size: 1em; /* 16px */
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 600px) {
+    body {
+        font-size: 14px;
+    }
+
+    h1 {
+        font-size: 1.5em; /* 21px */
+    }
+
+    h2 {
+        font-size: 1.2em; /* 17px */
+    }
+
+    p {
+        font-size: 0.9em; /* 14px */
+    }
+
+    span {
+        font-size: 0.9em; /* 14px */
+    }
+}
