--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 85%;
-    font-size: 20rem;
+    font-size: 2px;
     color: #fff;
     &:hover{
         cursor: pointer;
