--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,23 +58,29 @@
             <ng-template pTemplate="header" >
                 <div style="display: flex; justify-content: space-between;flex-direction: row;">
                     <span>List of Rooms</span>
-                    <!-- <span id="refresh" class="pi pi-refresh" 
-                        style="color: #9eade6; font-size: 1.6rem;" 
-                        onmouseover="this.style.color='#5f7df4'; this.style.transition='all 0.2s';this.style.cursor='pointer'"
-                        onmouseout="this.style.color='#9eade6'" ></span> -->
                 </div>
             </ng-template>
             <ng-template let-room pTemplate="item" >
                 <div class="flex flex-wrap p-2 align-items-center gap-3">
                     <div class="flex-1 flex flex-column gap-2">
-                        <span class="font-bold">{{ room.name }}</span>
+                        <div class="font-bold" style="display: flex;justify-content: space-between;flex-direction: row;">
+                            <div>
+                                <span id="refresh" class="pi pi-circle-fill" *ngIf="room.users.length < room.maxUsers"
+                                style="color: #26ff00;"></span>  
+                                <span id="refresh" class="pi pi-circle-fill" *ngIf="room.users.length == room.maxUsers"
+                                style="color: #ff0000;"></span>
+                                &nbsp; {{ room.name}}
+                            </div>
+                            <div>{{room.users.length}}/{{room.maxUsers}} <span id="refresh" class="pi pi-user"></span></div>  
+                        </div>
                         <div class="flex align-items-center gap-2">
                             <i class="pi pi-calendar text-sm"></i>
                             <span>{{ room.createdAt | date: "medium" }}</span>
                         </div>
                     </div>
                     <span class="font-bold text-900">
-                        <p-button label="Join" icon="pi pi-user-plus" (click)="joinRoom(room)" class="p-button-success" />
+                        <p-button label="Join" icon="pi pi-user-plus" (click)="joinRoom(room)" class="p-button-success" *ngIf="room.users.length < room.maxUsers" />
+                        <p-button label="Full" icon="pi pi-user-plus" class="p-button-danger" *ngIf="room.users.length == room.maxUsers" disabled=""/>
                     </span>
                 </div>
             </ng-template>
