added rooms feature and other Quality of life feature

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,10 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
-
 <p-toast></p-toast>
 
 <!-- MODALS -->
-<p-dialog [(visible)]="loginVisible">
+<p-dialog [(visible)]="loginVisible"  [modal]="true" [draggable]="false">
     <ng-template pTemplate="headless">
         <div class="flex flex-column px-8 py-5 gap-4" style="border-radius: 12px; background-image: radial-gradient(circle at left top, var(--primary-400), var(--primary-700))">
             <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" class="cancel" (click)="closeLoginDialog()" />
@@ -24,10 +23,10 @@
     </ng-template>
 </p-dialog>
 
-<p-dialog [(visible)]="createRoomVisible" class="themed-dialog">
+<p-dialog [(visible)]="createRoomVisible" [modal]="true" class="themed-dialog" [draggable]="false">
 
     <ng-template pTemplate="header">
-        <h2 class="dialog-header">Crea Partita</h2>
+        <h2 class="dialog-header">Create room</h2>
     </ng-template>
     <ng-template pTemplate="content">
         <div class="dialog-content">
@@ -37,20 +36,45 @@
             </div>
             <div class="field">
                 <label for="roomPassword">Password</label>
-                <input type="password" pInputText id="roomPassword" [(ngModel)]="roomPassword" class="input-field"/>
+                <input type="password" pInputPassword id="roomPassword" [(ngModel)]="roomPassword" class="input-field"/>
             </div>
             <div class="field">
                 <label for="roomMaxPlayers">Max Players</label>
-                <input type="number" pInputText id="roomMaxPlayers" [(ngModel)]="roomMaxUsers" class="input-field"/>
+                <p-inputNumber 
+                [(ngModel)]="roomMaxUsers" 
+                [showButtons]="true" 
+                buttonLayout="horizontal" 
+                spinnerMode="horizontal" 
+                decrementButtonClass="p-button-secondary"
+                incrementButtonClass="p-button-secondary" 
+                incrementButtonIcon="pi pi-plus" 
+                decrementButtonIcon="pi pi-minus"
+                min="2"
+                max="40" />
             </div>
         </div>
     </ng-template>
     <ng-template pTemplate="footer">
         <button pButton label="Create" icon="pi pi-check" class="dialog-button" (click)="createRoom()"></button>
-        <button pButton label="Cancel" icon="pi pi-times" class="dialog-button" (click)="closeCreateRoomDialog()"></button>
     </ng-template>
 </p-dialog>
 
+<p-dialog [modal]="true" [(visible)]="joinRoomVisible" [style]="{ width: '25rem' }" class="themed-dialog" [draggable]="false">
+    <ng-template pTemplate="header">
+        <h2 class="dialog-header">Password of the room</h2>
+    </ng-template>
+    <ng-template pTemplate="content">
+        <div class="dialog-content">
+            <div class="field">
+                <label for="roomPassword">Password</label>
+                <input type="password" pInputText id="roomPassword" [(ngModel)]="joinRoomPassword" class="input-field"/>
+            </div>
+        </div>  
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <button pButton label="Join" icon="pi pi-user-plus" class="dialog-button" (click)="joinRoom()"></button>
+    </ng-template>
+</p-dialog>
 
 <!-- END MODALS -->
 
@@ -62,7 +86,7 @@
     <div class="flex-items">
 
         <h1>FIND THE SPY</h1>
-        <button pButton label="Crea Partita" icon="pi pi-plus" class="create-button" (click)="showCreateRoomDialog()"></button>
+        <button pButton label="Create room" icon="pi pi-plus" class="create-button" (click)="showCreateRoomDialog()"></button>
 
         <p-orderList 
             [value]="rooms" 
@@ -72,12 +96,13 @@
             <ng-template pTemplate="header" >
                 <div style="display: flex; justify-content: space-between;flex-direction: row;">
                     <span>AVALIABLE TO JOIN</span>
+                    <p-progressSpinner ariaLabel="loading" styleClass="w-2rem h-2rem" *ngIf="listLoading" />
                 </div>
             </ng-template>
             <ng-template let-room pTemplate="item" >
                 <div class="flex flex-wrap p-2 align-items-center gap-3">
                     <div class="flex-1 flex flex-column gap-2">
-                        <div class="font-bold" style="display: flex;justify-content: space-between;flex-direction: row;">
+                        <div class="font-bold" style="display: flex;justify-content: space-between;flex-direction: row;gap:20vw">
                             <div>
                                 <span id="refresh" class="pi pi-circle-fill" *ngIf="room.users.length < room.maxUsers"
                                 style="color: #26ff00;"></span>  
@@ -85,15 +110,15 @@
                                 style="color: #ff0000;"></span>
                                 &nbsp; {{ room.name}}
                             </div>
-                            <div>{{room.users.length}}/{{room.maxUsers}} <span id="refresh" class="pi pi-user"></span></div>  
+                            <div>{{room.users.length}}/{{room.maxUsers}} <span id="refresh" class="pi pi-users"></span></div>  
                         </div>
                         <div class="flex align-items-center gap-2">
-                            <i class="pi pi-calendar text-sm"></i>
-                            <span>{{ room.createdAt | date: "medium" }}</span>
+                            <i class="pi pi-user text-sm"></i>
+                            <span>{{ room.owner }}</span>
                         </div>
                     </div>
                     <span class="font-bold text-900">
-                        <p-button label="Join" icon="pi pi-user-plus" (click)="joinRoom(room)" class="p-button-success" *ngIf="room.users.length < room.maxUsers" />
+                        <p-button label="Join" icon="pi pi-user-plus" (click)="showJoinRoomDialog(room)" class="p-button-success" *ngIf="room.users.length < room.maxUsers" />
                         <p-button label="Full" icon="pi pi-user-plus" class="p-button-danger" *ngIf="room.users.length == room.maxUsers" disabled=""/>
                     </span>
                 </div>
