--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -32,27 +32,27 @@
 
 
 .create-button {
-    font-family: Roboto, cursive; /* Font Special Elite */
-    background-color: #435a66; /* Colore di sfondo */
+    font-family: Roboto, cursive; 
+    background-color: #435a66;
     font-weight: 900;
-    color: #fff; /* Colore del testo */
-    border: 1px solid #fff; /* Bordo nero */
-    border-radius: 30px; /* Arrotondamento dei bordi */
-    padding: 12px 24px; /* Spaziatura interna */
-    font-size: 24px; /* Dimensione del testo */
-    font-weight: bold; /* Testo in grassetto */
-    cursor: pointer; /* Puntatore del mouse */
-    text-shadow: 1px 1px 2px #000; /* Ombra del testo */
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5); /* Ombra del bottone */
-    display: inline-block; /* Allineamento inline-block */
-    margin: 20px auto; /* Margine per centratura */
+    color: #fff; 
+    border: 1px solid #fff; 
+    border-radius: 30px; 
+    padding: 12px 24px; 
+    font-size: 24px; 
+    font-weight: bold; 
+    cursor: pointer; 
+    text-shadow: 1px 1px 2px #000; 
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5); 
+    display: inline-block; 
+    margin: 20px auto; 
     width: auto;
-    text-align: center; /* Allineamento del testo */
-    text-transform: uppercase; /* Testo in maiuscolo */
+    text-align: center; 
+    text-transform: uppercase; 
 }
 
 .create-button:hover {
-    background-color: #f3d19c; /* Colore di sfondo al passaggio del mouse */
+    background-color: #f3d19c; 
 }
 
 
