--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,24 +4,10 @@
 <p-toast></p-toast>
 
 <!-- MODALS -->
-<p-dialog [(visible)]="loginVisible"  [modal]="true" [draggable]="false">
-    <ng-template pTemplate="headless">
-        <div class="flex flex-column px-8 py-5 gap-4" style="border-radius: 12px; background-image: radial-gradient(circle at left top, var(--primary-400), var(--primary-700))">
-            <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" class="cancel" (click)="closeLoginDialog()" />
-            <div class="inline-flex flex-column gap-2">
-                <h2 for="a" class="text-primary-50 font-semibold">Play as Guest</h2>
-                <label for="username" class="text-primary-50 font-semibold">Username</label>
-                <input pInputText id="username" class="bg-white-alpha-20 border-none p-3 text-primary-50" [(ngModel)]="username" />
-            </div>
-            <div class="flex align-items-center gap-2">
-                <p-button label="Enter" [text]="true" styleClass="p-3 w-full text-primary-50 border-1 border-white-alpha-30 hover:bg-white-alpha-10" class="w-full" (onClick)="login()"  />
-            </div>
-            <h2 for="n" class="text-primary-50 font-semibold">Or login</h2>
-            <p-button (onClick)="login('google')" label="Login with Google" icon="pi pi-google"  class="p-button-google" severity="secondary" >
-            </p-button>
-        </div>
-    </ng-template>
-</p-dialog>
+<app-login-modal
+  [loginDialogVisible]="loginVisible"
+  (loginDialogVisibleChange)="waitLoginClosed($event)">
+</app-login-modal>
 
 <p-dialog [(visible)]="createRoomVisible" [modal]="true" class="themed-dialog" [draggable]="false">
 
