--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,3 @@
-
-<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
-
 <p-toast></p-toast>
 
 <!-- MODALS -->
@@ -47,7 +43,6 @@
     </ng-template>
     <ng-template pTemplate="footer">
         <button pButton label="Create" icon="pi pi-check" class="dialog-button" (click)="createRoom()"></button>
-        <button pButton label="Cancel" icon="pi pi-times" class="dialog-button" (click)="closeCreateRoomDialog()"></button>
     </ng-template>
 </p-dialog>
 
@@ -61,9 +56,11 @@
 
     <div class="flex-items">
 
-        <h1>FIND THE SPY</h1>
-        <button pButton label="Crea Partita" icon="pi pi-plus" class="create-button" (click)="showCreateRoomDialog()"></button>
+         <h1>FIND THE SPY</h1>
+         <button pButton label="Crea Partita" class="create-button" (click)="showCreateRoomDialog()"></button>
 
+         <div class="separator"></div>
+            
         <p-orderList 
             [value]="rooms" 
             [listStyle]="{ 'max-height': '300px' }" 
