--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -9,6 +9,7 @@
     }
 }
 
+/*      FLEXBOX         */
 .container{
     margin: 0 !important;
     padding: 0 !important;
@@ -17,110 +18,123 @@
     background-image: url('../../assets/images/background.png');
     background-position: 50% 0;
     background-size: cover;
+
+    display: flex;
+    align-items: end;
+    justify-content: center;
 }
 
 .flex-items{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 70vh;
     width: 100vw;
     flex-direction: column;
+    text-align: center;
+    margin: 5%
 }
 
 
+/*     BUTTONS         */
 
+button {
+    background-color: #121212; 
+    color: #FFC107; 
+    border: 2% solid #121212;
+    border-radius: 500px;
+    width: 80%;
+    font-size: 24px;
+    font-family: 'Bebas Neue', sans-serif;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 
-.create-button {
-    font-family: Roboto, cursive; /* Font Special Elite */
-    background-color: #435a66; /* Colore di sfondo */
-    font-weight: 900;
-    color: #fff; /* Colore del testo */
-    border: 1px solid #fff; /* Bordo nero */
-    border-radius: 30px; /* Arrotondamento dei bordi */
-    padding: 12px 24px; /* Spaziatura interna */
-    font-size: 24px; /* Dimensione del testo */
-    font-weight: bold; /* Testo in grassetto */
-    cursor: pointer; /* Puntatore del mouse */
-    text-shadow: 1px 1px 2px #000; /* Ombra del testo */
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5); /* Ombra del bottone */
-    display: inline-block; /* Allineamento inline-block */
-    margin: 20px auto; /* Margine per centratura */
-    width: auto;
-    text-align: center; /* Allineamento del testo */
-    text-transform: uppercase; /* Testo in maiuscolo */
+    min-height: 47px;
 }
 
-.create-button:hover {
-    background-color: #f3d19c; /* Colore di sfondo al passaggio del mouse */
+button:hover, button:focus {
+    background-color: #800020; 
+    box-shadow: 0 0 12px rgba(128, 0, 32, 0.75);
+}
+
+/* TITLE */
+
+h1 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 70px;
+    color: #FFC107; 
+    text-shadow: 2px 2px 4px rgba(128, 0, 32, 0.7);  
+    animation: fadeIn 1s ease-out;
+    transition: all 0.5s ease-out;
+    margin: 0;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+.separator{
+    width: 85%;
+    border-bottom: 2px solid #FFC107;
+    margin: 5% 5%;
 }
 
 
+/*     DIALOG STYLES     */
 
-
-/* Stili per il dialogo tematico */
 .themed-dialog .p-dialog-content {
-    background-color: rgba(44, 44, 52, 0.9); /* Sfondo scuro semi-trasparente */
-    border-radius: 20px; /* Bordi arrotondati */
-    padding: 20px; /* Spaziatura interna */
-    font-family: 'Special Elite', cursive; /* Font Special Elite */
-    color: #fde4a5; /* Colore del testo */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Ombra per dare profondità */
+    background-color: rgba(44, 44, 52, 0.9);
+    border-radius: 20px;
+    padding: 20px;
+    font-family: 'Special Elite', cursive;
+    color: #fde4a5;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Stili per l'intestazione del dialogo */
 .themed-dialog .dialog-header {
-    font-family: 'Special Elite', cursive; /* Font Special Elite */
-    font-size: 24px; /* Dimensione del testo */
-    color: #fdd87d; /* Colore del testo */
-    text-align: center; /* Allineamento centrato */
-    margin: 0; /* Rimuove il margine predefinito */
+    font-family: 'Special Elite', cursive;
+    font-size: 24px;
+    color: #fdd87d;
+    text-align: center;
+    margin: 0;
 }
 
-/* Stili per il contenuto del dialogo */
 .themed-dialog .dialog-content {
     display: flex;
     flex-direction: column;
-    gap: 15px; /* Spaziatura tra i campi */
+    gap: 15px;
 }
 
-/* Stili per i campi del dialogo */
 .themed-dialog .field {
     display: flex;
     flex-direction: column;
 }
 
 .themed-dialog .input-field {
-    background-color: #2C2C34; /* Sfondo scuro per i campi di input */
-    color: #fde4a5; /* Colore del testo */
-    border: 1px solid #444; /* Bordo dei campi */
-    border-radius: 10px; /* Bordi arrotondati */
-    padding: 10px; /* Spaziatura interna */
-    font-family: 'Special Elite', cursive; /* Font Special Elite */
+    background-color: #2C2C34;
+    color: #fde4a5;
+    border: 1px solid #444;
+    border-radius: 10px;
+    padding: 10px;
+    font-family: 'Special Elite', cursive;
 }
 
-/* Stili per i bottoni del dialogo */
 .themed-dialog .dialog-button {
-    font-family: 'Special Elite', cursive; /* Font Special Elite */
-    background-color: #fde4a5; /* Colore di sfondo */
-    color: #000; /* Colore del testo */
-    border: 2px solid #000; /* Bordo nero */
-    border-radius: 20px; /* Arrotondamento dei bordi */
-    padding: 10px 20px; /* Spaziatura interna */
-    font-size: 18px; /* Dimensione del testo */
-    font-weight: bold; /* Testo in grassetto */
-    cursor: pointer; /* Puntatore del mouse */
-    margin: 5px; /* Margine per spaziatura */
+    font-family: 'Special Elite', cursive;
+    background-color: #fde4a5;
+    color: #000;
+    border: 2px solid #000;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 5px;
 }
 
 .themed-dialog .dialog-button:hover {
-    background-color: #f3d19c; /* Colore di sfondo al passaggio del mouse */
-}
-
-.flex-items > h1{
-    font-family: Montserrat, sans-serif;
-    font-weight: 900;
-    font-style: italic;
-    
-
+    background-color: #f3d19c;
 }
