added new background for dekstop version

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -14,6 +14,12 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 600px) {
+    .container{
+        background-image: url('../../assets/images/background_mobile.png');
+    }
+}
+
 .flex-items{
     display: flex;
     justify-content: center;
