--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -14,6 +14,10 @@
     justify-content: center;
 }
 
+.create-button{
+    max-width: 700px;
+}
+
 @media screen and (max-width: 600px) {
     .container{
         background-image: url('../../assets/images/background_mobile.png');
