--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -50,7 +50,6 @@ button {
     cursor: pointer;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-
     min-height: 47px;
 }
 
@@ -89,15 +88,15 @@ h1 {
     background-color: rgba(44, 44, 52, 0.9);
     border-radius: 20px;
     padding: 20px;
-    font-family: 'Special Elite', cursive;
-    color: #fde4a5;
+    font-family: 'Bebas Neue', sans-serif;
+    color: #FFC107;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .themed-dialog .dialog-header {
-    font-family: 'Special Elite', cursive;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 24px;
-    color: #fdd87d;
+    color: #FFC107;
     text-align: center;
     margin: 0;
 }
@@ -115,16 +114,16 @@ h1 {
 
 .themed-dialog .input-field {
     background-color: #2C2C34;
-    color: #fde4a5;
+    color: #FFC107;
     border: 1px solid #444;
     border-radius: 10px;
     padding: 10px;
-    font-family: 'Special Elite', cursive;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 .themed-dialog .dialog-button {
-    font-family: 'Special Elite', cursive;
-    background-color: #fde4a5;
+    font-family: 'Bebas Neue', sans-serif;
+    background-color: #FFC107;
     color: #000;
     border: 2px solid #000;
     border-radius: 20px;
@@ -136,5 +135,7 @@ h1 {
 }
 
 .themed-dialog .dialog-button:hover {
-    background-color: #f3d19c;
+    background-color: #800020;
+    color: #FFC107;
 }
+
