fix css issue home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
             filterPlaceholder="Filter by name">
             <ng-template pTemplate="header" >
                 <div style="display: flex; justify-content: space-between;flex-direction: row;">
-                    <span>ROOMS</span>
+                    <span class="list-span">ROOMS</span>
                     <p-progressSpinner ariaLabel="loading" styleClass="w-2rem h-2rem" *ngIf="listLoading" />
                 </div>
             </ng-template>
