--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -7,7 +7,7 @@
     width: 100%;
     background-image: url('../../assets/images/background.png');
     background-position: 50% 0;
-    background-size: cover;
+    background-size: cover !important;
 
     display: flex;
     align-items: end;
@@ -21,6 +21,11 @@
 @media screen and (max-width: 600px) {
     .container{
         background-image: url('../../assets/images/background_mobile.png');
+    }
+
+    h1{
+        font-size: 70px !important;
+        text-shadow: 2px 2px 4px rgba(128, 0, 32, 0.7) !important;
     }
 }
 
@@ -38,7 +43,7 @@
 
 /*     BUTTONS         */
 
-button {
+.create-button {
     background-color: #121212; 
     color: #FFC107; 
     border: 2% solid #121212;
@@ -53,7 +58,7 @@ button {
     min-height: 47px;
 }
 
-button:hover, button:focus {
+.create-button:hover, .create-button:focus {
     background-color: #800020; 
     box-shadow: 0 0 12px rgba(128, 0, 32, 0.75);
 }
@@ -62,12 +67,20 @@ button:hover, button:focus {
 
 h1 {
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 70px;
+    font-size: 150px;
     color: #FFC107; 
-    text-shadow: 2px 2px 4px rgba(128, 0, 32, 0.7);  
+    text-shadow: 5px 5px 7px rgba(128, 0, 32, 0.7);  
     animation: fadeIn 1s ease-out;
     transition: all 0.5s ease-out;
     margin: 0;
+    user-select: none;
+}
+
+.list-span{
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 24px;
+    color: #FFC107;
+    letter-spacing: 0.1vw;
 }
 
 @keyframes fadeIn {
@@ -90,7 +103,7 @@ h1 {
     padding: 20px;
     font-family: 'Bebas Neue', sans-serif;
     color: #FFC107;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
 }
 
 .themed-dialog .dialog-header {
@@ -133,8 +146,5 @@ h1 {
     margin: 5px;
 }
 
-.themed-dialog .dialog-button:hover {
-    background-color: #800020;
-    color: #FFC107;
-}
+
 
